syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// RBAC服务
service RbacService {
    // 用户登录
    rpc UserLogin(RbacLoginRequest)returns(RbacLoginResponse) {}
    // 获取JWT密钥
    rpc GetJwtToken(Empty)returns(String) {}
    // 获取用户的信息
    rpc GetUserResource(GetUserResRequest)returns(RbacUserResourceResponse) {}
    // 获取资源树形数据
    rpc QueryResList (QueryPermResRequest) returns (QueryPermResResponse) {
    }
    // 移动资源顺序
    rpc MoveResOrdinal(MoveResOrdinalRequest) returns (Result) {}

    // 部门树形数据
    rpc DepartTree(Empty)returns(RbacTree) {}
    // 保存部门
    rpc SavePermDept (SavePermDeptRequest) returns (SavePermDeptResponse) {
    }
    // 获取部门
    rpc GetPermDept (PermDeptId) returns (SPermDept) {
    }
    // 删除部门
    rpc DeletePermDept (PermDeptId) returns (Result) {
    }
    // 保存岗位
    rpc SavePermJob (SavePermJobRequest) returns (SavePermJobResponse) {
    }
    // 获取岗位
    rpc GetPermJob (PermJobId) returns (SPermJob) {
    }
    // 获取岗位列表
    rpc QueryPermJobList (QueryPermJobRequest) returns (QueryPermJobResponse) {
    }
    // 删除岗位
    rpc DeletePermJob (PermJobId) returns (Result) {
    }
    // 获取岗位分页数据
    rpc PagingPermJob (PermJobPagingRequest) returns (PermJobPagingResponse);

    // 保存系统用户
    rpc SavePermUser (SavePermUserRequest) returns (SavePermUserResponse) {
    }
    // 获取系统用户
    rpc GetPermUser (PermUserId) returns (SPermUser) {
    }

    // 删除系统用户
    rpc DeletePermUser (PermUserId) returns (Result) {
    }
    // 获取系统用户分页数据
    rpc PagingPermUser (PermUserPagingRequest) returns (PermUserPagingResponse);

    // 保存角色
    rpc SavePermRole (SavePermRoleRequest) returns (SavePermRoleResponse) {
    }
    // 保存角色
    rpc UpdateRoleResource (UpdateRoleResRequest) returns (Result) {
    }
    // 获取角色
    rpc GetPermRole (PermRoleId) returns (SPermRole) {
    }
    // 获取角色列表
    rpc QueryPermRoleList (QueryPermRoleRequest) returns (QueryPermRoleResponse) {
    }
    // 删除角色
    rpc DeletePermRole (PermRoleId) returns (Result) {
    }
    // 获取角色分页数据
    rpc PagingPermRole (PermRolePagingRequest) returns (PermRolePagingResponse);

    // 保存PermRes
    rpc SavePermRes (SavePermResRequest) returns (SavePermResResponse) {
    }
    // 获取PermRes
    rpc GetPermRes (PermResId) returns (SPermRes) {
    }
    // 删除PermRes
    rpc DeletePermRes (PermResId) returns (Result) {
    }
}

// 用户登录
message RbacLoginRequest {
    // 用户名
    string username =  1;
    // md5密码
    string password = 2;
}

// 用户登录响应
message RbacLoginResponse {
    // 错误编码,0为成功
    int64 errCode = 1;
    // 错误消息
    string errMsg = 2;
    // 用户编号
    int64 userId =  3;
    // 访问令牌
    string accessToken = 4;
    // 角色标志
    repeated string permissions = 5;
    // 角色编号
    repeated int64 roles = 6;
}

// 用户资源响应,如果无用户则默认为超级管理员
message RbacUserResourceResponse {
    // 角色编号
    repeated int64 roles = 1;
    // 权限标志
    repeated string permissions = 2;
    // 菜单
    repeated SUserRes resources = 3;
}


message SUserRes {
    /** ID */
    int64 id = 1;
    /** 资源键 */
    string key = 2;
    /** 资源名称 */
    string name = 3;
    /** 资源类型,0: 目录 1: 资源 2: 菜单 3: 按钮 */
    int32 resType= 4;
    /** 深度/层级 */
    int32 depth = 5;
    /** 资源路径 */
    string path = 6;
    /** 图标 */
    string icon = 7;
    /** 权限,多个值用|分隔 */
    string permission = 8;
    /** 排序 */
    int32 sortNum = 9;
    /** 是否隐藏 */
    bool isHidden = 10;
    /** 组件名称 */
    string componentName = 11;
    /** 子资源 */
    repeated SUserRes children = 12;
}

message RoleId {
    int64 value =  1;
}
message UserId {
    int64 value =  1;
}


message RbacTree {
    int64 id = 1;
    string label = 2;
    repeated RbacTree children = 3;
}

message SavePermDeptRequest {
    /** ID */
    int64 id = 1;
    /** 名称 */
    string name = 2;
    /** 上级部门 */
    int64 pid = 3;
    /** 部门编码 */
    string code = 4;
    /** 状态 */
    int32 enabled = 5;
    /** 创建日期 */
    int64 createTime = 6;
}

message SavePermDeptResponse {
    int64 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}

message PermDeptId {
    int64 value =  1;
}
message SPermDept {
    /** ID */
    int64 id = 1;
    /** 名称 */
    string name = 2;
    /** 上级部门 */
    int64 pid = 3;
    /** 部门编码 */;
    string code = 4;
    /** 状态 */
    int32 enabled = 5;
    /** 创建日期 */
    int64 createTime = 6;
}

message QueryPermDeptRequest {
    /** 自定义参数 */
}

message QueryPermDeptResponse {
    repeated SPermDept list = 1;
}


message SavePermJobRequest {
    /** ID */
    int64 id = 1;
    /** 岗位名称 */
    string name = 2;
    /** 岗位状态 */
    int32 enabled = 3;
    /** 岗位排序 */
    int32 sort = 4;
    /** 部门ID */
    int64 deptId = 5;
    /** 创建日期 */
    int64 createTime = 6;
}

message SavePermJobResponse {
    int64 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}

message PermJobId {
    int64 value =  1;
}

message SPermJob {
    /** ID */
    int64 id = 1;
    /** 岗位名称 */
    string name = 2;
    /** 岗位状态 */
    int32 enabled = 3;
    /** 岗位排序 */
    int32 sort = 4;
    /** 部门ID */
    int64 deptId = 5;
    /** 创建日期 */
    int64 createTime = 6;
}

message QueryPermJobRequest {
    // 部门编号,默认为0. 该部门下的岗位也会查询出来
    int64 departId = 1;
}

message QueryPermJobResponse {
    repeated SPermJob list = 1;
}

message PagingPermJob {
    /** ID */
    int64 id = 1;
    /** 岗位名称 */
    string name = 2;
    /** 岗位状态 */
    int32 enabled = 3;
    /** 岗位排序 */
    int32 sort = 4;
    /** 部门ID */
    int64 deptId = 5;
    /** 创建日期 */
    int64 createTime = 6;
}

message PermJobPagingRequest {
    // 分页参数
    SPagingParams params = 1;
}

message PermJobPagingResponse {
    int64 total = 1;
    repeated PagingPermJob value =  2;
}



message SavePermUserRequest {
    /** ID */
    int64 id = 1;
    /** 用户名 */
    string username = 2;
    /** 密码 */
    string password = 3;
    /** 标志 */
    int32 flag = 4;
    /** 头像 */
    string portrait = 5;
    /** 昵称 */
    string nickName = 6;
    /** 性别 */
    string gender = 7;
    /** 邮箱 */
    string email = 8;
    /** 手机号码 */
    string phone = 9;
    /** 部门编号 */
    int64 deptId = 10;
    /** 岗位编号 */
    int64 jobId = 11;
    /** 状态：1启用、0禁用 */
    int32 enabled = 12;
    /** 最后登录的日期 */
    int64 lastLogin = 13;
    /** 创建日期 */
    int64 createTime = 14;
    // 用户角色
    repeated int64 roles = 15;
}

message SavePermUserResponse {
    int64 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}

message PermUserId {
    int64 value =  1;
}

message SPermUser {
    /** ID */
    int64 id = 1;
    /** 用户名 */
    string username = 2;
    /** 密码 */
    string password = 3;
    /** 标志 */
    int32 flag = 4;
    /** 头像 */
    string portrait = 5;
    /** NickName */
    string nickName = 6;
    /** Gender */
    string gender = 7;
    /** 邮箱 */
    string email = 8;
    /** 手机号码 */
    string phone = 9;
    /** 部门编号 */
    int64 deptId = 10;
    /** 岗位编号 */
    int64 jobId = 11;
    /** 状态：1启用、0禁用 */
    int32 enabled = 12;
    /** 最后登录的日期 */
    int64 lastLogin = 13;
    /** 创建日期 */
    int64 createTime = 14;
    // 用户角色
    repeated int64 roles = 15;
    // 权限
    repeated string permissions = 16;
}

message QueryPermUserRequest {
    /** 自定义参数 */
}

message QueryPermUserResponse {
    repeated SPermUser list = 1;
}

message PagingPermUser {
    /** ID */
    int64 id = 1;
    /** 用户名 */
    string username = 2;
    /** 密码 */
    string password = 3;
    /** 标志 */
    int32 flag = 4;
    /** 头像 */
    string portrait = 5;
    /** 昵称 */
    string nickName = 6;
    /** 性别 */
    string gender = 7;
    /** 邮箱 */
    string email = 8;
    /** 手机号码 */
    string phone = 9;
    /** 部门编号 */
    int64 deptId = 10;
    /** 岗位编号 */
    int64 jobId = 11;
    /** 状态：1启用、0禁用 */
    int32 enabled = 12;
    /** 最后登录的日期 */
    int64 lastLogin = 13;
    /** 创建日期 */
    int64 createTime = 14;
}

message PermUserPagingRequest {
    // 部门编号,默认为0. 该部门下的用户也会查询出来
    int64 departId = 1;
    // 分页参数
    SPagingParams params = 2;
}

message PermUserPagingResponse {
    int64 total = 1;
    repeated PagingPermUser value =  2;
}


message SavePermRoleRequest {
    /** ID */
    int64 id = 1;
    /** 名称 */
    string name = 2;
    /** 角色级别 */
    int32 level = 3;
    /** 数据权限 */
    string dataScope = 4;
    /** 功能权限 */
    string permission = 5;
    /** 备注 */
    string remark = 6;
    /** 创建日期 */
    int64 createTime = 7;
}

// 更新角色资源请求
message UpdateRoleResRequest {
    int64 roleId = 1;
    repeated int64 resources = 2;
}
message SavePermRoleResponse {
    int64 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}

message PermRoleId {
    int64 value =  1;
}

message SPermRole {
    /** ID */
    int64 id = 1;
    /** 名称 */
    string name = 2;
    /** 角色级别 */
    int32 level = 3;
    /** 数据权限 */
    string dataScope = 4;
    /** 功能权限 */
    string permission = 5;
    /** 备注 */
    string remark = 6;
    /** 创建日期 */
    int64 createTime = 7;
    /** 关联的资源ID列表 */
    repeated int64 relatedResIdList = 8;
}

message QueryPermRoleRequest {
    /** 自定义参数 */
}

message QueryPermRoleResponse {
    repeated SPermRole list = 1;
}

message PagingPermRole {
    /** ID */
    int64 id = 1;
    /** 名称 */
    string name = 2;
    /** 角色级别 */
    int32 level = 3;
    /** 数据权限 */
    string dataScope = 4;
    /** 功能权限 */
    string permission = 5;
    /** 备注 */
    string remark = 6;
    /** 创建日期 */
    int64 createTime = 7;
}

message PermRolePagingRequest {
    // 分页参数
    SPagingParams params = 1;
}

message PermRolePagingResponse {
    int64 total = 1;
    repeated PagingPermRole value =  2;
}


message SavePermResRequest {
    /** 资源ID */
    int64 id = 1;
    /** 资源名称 */
    string name = 2;
    /** 资源类型, 0: 目录 1: 资源 2: 菜单 3: 按钮 */
    int32 resType= 3;
    /** 上级菜单ID */
    int64 pid = 4;
    /** 资源键 */
    string key = 5;
    /** 资源路径 */
    string path = 6;
    /** 图标 */
    string icon = 7;
    /** 权限,多个值用|分隔 */
    string permission = 8;
    /** 排序 */
    int32 sortNum = 9;
    /** 是否外部 */
    bool isExternal = 10;
    /** 是否隐藏 */
    bool isHidden = 11;
    /** 创建日期 */
    int64 createTime = 12;
    /** 组件名称 */
    string componentName = 13;
    /** 缓存 */
    string cache = 14;
}

message SavePermResResponse {
    int64 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}

message PermResId {
    int64 value =  1;
}

message SPermRes {
    /** 资源ID */
    int64 id = 1;
    /** 资源名称 */
    string name = 2;
    /** 资源类型, 0: 目录 1: 资源 2: 菜单 3: 按钮 */
    int32 resType= 3;
    /** 上级菜单ID */
    int64 pid = 4;
    /** 深度/层级 */
    int32 depth = 5;
    /** 资源键 */
    string key = 6;
    /** 资源路径 */
    string path = 7;
    /** 图标 */
    string icon = 8;
    /** 权限,多个值用|分隔 */
    string permission = 9;
    /** 排序 */
    int32 sortNum = 10;
    /** 是否外部 */
    bool isExternal = 11;
    /** 是否隐藏 */
    bool isHidden = 12;
    /** 创建日期 */
    int64 createTime = 13;
    /** 组件名称 */
    string componentName = 14;
    /** 缓存 */
    string cache = 15;
    /** 是否为叶子节点 */
    bool isLeaf = 16;
    /** 子资源 */
    repeated SPermRes children = 17;
}

message GetUserResRequest {
    /** 用户编号 */
    int64 userId =  1;
    /** 是否只显示菜单 */
    bool onlyMenu = 2;
}

message QueryPermResRequest {
    /** 关键词 */
    string keyword = 1;
    /** 是否只显示菜单 */
    bool onlyMenu = 2;
    /** 上级编号 */
    int64 parentId = 3;
    /** 初始化数据ID */
    int64 initialId = 4;
}

message QueryPermResResponse {
    repeated SPermRes list = 1;
    // 返回初始化上级ID列表
    repeated int64 initialList = 2;
}

message PagingPermRes {
    /** 资源ID */
    int64 id = 1;
    /** 资源名称 */
    string name = 2;
    /** 资源类型, 0: 目录 1: 资源 2: 菜单 3: 按钮 */
    int32 resType= 3;
    /** 上级菜单ID */
    int64 pid = 4;
    /** 资源键 */
    string key = 5;
    /** 资源路径 */
    string path = 6;
    /** 图标 */
    string icon = 7;
    /** 权限,多个值用|分隔 */
    string permission = 8;
    /** 排序 */
    int32 sortNum = 9;
    /** 是否外部 */
    bool isExternal = 10;
    /** 是否隐藏 */
    bool isHidden = 11;
    /** 创建日期 */
    int64 createTime = 12;
    /** 组件名称 */
    string componentName = 13;
    /** 缓存 */
    string cache = 14;
}

message PermResPagingRequest {
    // 分页参数
    SPagingParams params = 1;
}

message PermResPagingResponse {
    int64 total = 1;
    repeated PagingPermRes value =  2;
}

// 移动资源顺序
message MoveResOrdinalRequest {
    /** 资源编号 */
    int64 resourceId = 1;
    /** 移动方向,0:向上移,1:向下移 */
    int32 direction = 2;
}
